feat(user login): create new route and docs for user login
